Fixed a MVVM broken pattern. PageNavigation used to reference the page used. Now it does not it only reference the viewmodel and the root page convert it to a page

--- a/MvvmNavigation/MvvmNavigation.csproj
+++ b/MvvmNavigation/MvvmNavigation.csproj
@@ -47,6 +47,9 @@
     <ProjectCapability Include="Msix" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MvvmNavigation.ViewModel\MvvmNavigation.ViewModel.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <Page Update="Views\Page1_4.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
